modified:   src/main/java/com/example/controller/SocialMediaController.java 	new file:   src/main/java/com/example/service/Acc.java 	modified:   src/main/java/com/example/service/AccountService.java 	modified:   src/main/java/com/example/service/AccountServiceImpl.java 	modified:   src/main/java/com/example/service/MessageService.java 	modified:   src/test/java/com/example/SpringTest.java